objects/ProductCatalog__c.object
<CustomObject>
    <fields>
        <fullName>CatalogStructure__c</fullName>
        <label>分類構造</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationLevel__c</fullName>
        <label>分類レベル</label>
        <precision>3</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ClassificationNo__c</fullName>
        <label>分類</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ClassificationType__c</fullName>
        <label>分類/品目</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>2</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>ExternalID__c</fullName>
        <externalId>true</externalId>
        <label>外部ID</label>
        <length>255</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Manufacturer__c</fullName>
        <label>購買元取引先/製造元記述</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ModelType__c</fullName>
        <label>機種区分</label>
        <picklist>
            <picklistValues>
                <fullName>1</fullName>
            </picklistValues>
            <picklistValues>
                <fullName>3</fullName>
            </picklistValues>
        </picklist>
        <type>Picklist</type>
    </fields>
    <fields>
        <fullName>Position__c</fullName>
        <label>位置</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>ProductCatalog__c</fullName>
        <label>製品カタログ</label>
        <length>6</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ProductItem__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>品目</label>
        <referenceTo>ProductItem__c</referenceTo>
        <relationshipLabel>品目カタログ情報</relationshipLabel>
        <relationshipName>CtalogItems</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>ProductNo__c</fullName>
        <formula>ProductItem__r.Name</formula>
        <label>品目No.</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SearchKeyWord__c</fullName>
        <label>検索キー</label>
        <length>50</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>SequenceNo__c</fullName>
        <label>連番</label>
        <precision>6</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <label>品目カタログ情報</label>
    <listViews>
        <fullName>All</fullName>
        <columns>NAME</columns>
        <columns>ProductCatalog__c</columns>
        <columns>Position__c</columns>
        <columns>ProductItem__c</columns>
        <columns>ModelType__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>ClassificationNo__c</columns>
        <columns>ClassificationType__c</columns>
        <columns>ClassificationLevel__c</columns>
        <columns>SearchKeyWord__c</columns>
        <columns>CatalogStructure__c</columns>
        <columns>UPDATEDBY_USER</columns>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>All1</fullName>
        <filterScope>Everything</filterScope>
        <label>すべて選択</label>
    </listViews>
    <listViews>
        <fullName>Manufacturer</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Position__c</columns>
        <columns>ModelType__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>ProductCatalog__c</columns>
        <columns>ClassificationNo__c</columns>
        <columns>ProductItem__c</columns>
        <columns>ClassificationType__c</columns>
        <columns>ClassificationLevel__c</columns>
        <columns>ProductNo__c</columns>
        <columns>SearchKeyWord__c</columns>
        <columns>CatalogStructure__c</columns>
        <columns>SequenceNo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>Manufacturer__c</field>
            <operation>notEqual</operation>
        </filters>
        <label>記述あり</label>
        <language>ja</language>
    </listViews>
    <listViews>
        <fullName>shn_code</fullName>
        <columns>NAME</columns>
        <columns>LAST_UPDATE</columns>
        <columns>Position__c</columns>
        <columns>ModelType__c</columns>
        <columns>Manufacturer__c</columns>
        <columns>ProductCatalog__c</columns>
        <columns>ClassificationNo__c</columns>
        <columns>ProductItem__c</columns>
        <columns>ClassificationType__c</columns>
        <columns>ClassificationLevel__c</columns>
        <columns>ProductNo__c</columns>
        <columns>SearchKeyWord__c</columns>
        <columns>CatalogStructure__c</columns>
        <columns>SequenceNo__c</columns>
        <filterScope>Everything</filterScope>
        <filters>
            <field>ProductCatalog__c</field>
            <operation>equals</operation>
            <value>382833</value>
        </filters>
        <label>商品コード指定</label>
        <language>ja</language>
    </listViews>
    <nameField>
        <label>カタログ情報名</label>
        <type>Text</type>
    </nameField>
    <sharingModel>ReadWrite</sharingModel>
</CustomObject>